@@ -8,7 +8,9 @@ Release 7.4 21-Sep-07
 The only change of specification is the addition of options to control whether
 \R matches any Unicode line ending (the default) or just CR, LF, and CRLF.
 Otherwise, the changes are bug fixes and a refactoring to reduce the number of
-relocations needed in a shared library.
+relocations needed in a shared library. There have also been some documentation
+updates, in particular, some more information about using CMake to build PCRE
+has been added to the NON-UNIX-USE file.
 
 
 Release 7.3 28-Aug-07
